fix: hr on safari

--- a/src/theme/default/components/hr.less
+++ b/src/theme/default/components/hr.less
@@ -1,5 +1,7 @@
 hr {
   border-top-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 0px;
   border-color: @hr-color;
   margin-bottom: @default-distance;
 }
